# pigzpp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  es-metadata.yml  pyproject.toml
.github/workflows/: ci.yml  distribute.yml
benchmarks/: CMakeLists.txt  bench_binary.py  bench_python.py  compare.sh  gen_data.py  report.md  results-260307-py3.14.md  results-260508-png.md
benchmarks/core/: CMakeLists.txt  bench_binary.py  bench_compress.cpp  compare.sh  gen_data.py  pigz_sp.py  report.md  results-260313.md
benchmarks/docker/: gen_layer.sh  go.mod  go.sum  main.go  setup.sh
benchmarks/docker/pigzppcgo/: pigzppcgo.go
benchmarks/go-docker/: fetch_layer.sh  go.mod  helpers.go  main.go  setup.sh
benchmarks/png/: bench_png.py  results-260508-png.md  results-260713-png.md
benchmarks/python/: bench_python.py  bench_zip.py  results-260713-zip.md
benchmarks/rust/: Cargo.toml  build.rs
benchmarks/rust/src/: main.rs
benchmarks/wasm/: README.md  bench.mjs  compare_zlibng.mjs  package-lock.json  package.json  scaling.mjs  zip.mjs
notes/: 01-requirements.md  02-claude-chat.md  02-gpt-chat.md  02-plan.md  03-report-phase1.md  04-report-phase2.md  05-summary.md  06-isa-integration-results.md  06-isal-integration-plan.md  07-wasm-plan.md  future-wishlist.md
scripts/: build_wasm.sh  check_dist_dependencies.py  report_dist_sizes.py  sanitize_chat.py  setup.sh
src/go/: go.mod  pigzpp.go  zip.go  zip_test.go
src/pigzpp/: CMakeLists.txt  capi.cpp  capi.h  compress.cpp  compress.h  config.cpp  config.h  crc.cpp  crc.h  decompress.cpp  decompress.h  format.cpp  format.h  io.cpp  io.h  io_utils.h  main.cpp  pigzpp.h  platform.h  png.cpp  png.h  pool.cpp  pool.h  zip.cpp  zip.h
src/python/: CMakeLists.txt  pigzpp.version  pigzpp_pybind.cpp
src/rust/: Cargo.toml  build.rs
src/rust/src/: lib.rs
src/wasm/: CMakeLists.txt  pigzpp-loader.mjs  pigzpp_wasm.cpp  zlibng_wasm.cpp
tests/: CMakeLists.txt  test_cli.cpp  test_compress_decompress.cpp  test_crc.cpp  test_format.cpp  test_png.py  test_png_cpp.cpp  test_pool.cpp  test_python.py  test_wasm.mjs  test_zip.cpp  test_zip.py
